--- a/project/Main.storyboard
+++ b/project/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zTV-4i-OvP">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,82 +10,93 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--My Title-->
+        <scene sceneID="P6K-e1-MaR">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project1WordMagnets" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <toolbarItems>
-                        <barButtonItem title="Word Banks" id="jHY-2x-TgJ">
-                            <connections>
-                                <segue destination="qU3-zL-s32" kind="popoverPresentation" popoverAnchorBarButtonItem="jHY-2x-TgJ" id="ZGQ-gl-RZC">
-                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                </segue>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="7yw-gf-Ydv"/>
-                    </toolbarItems>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-116" y="72"/>
-        </scene>
-        <!--Word Bank Selector-->
-        <scene sceneID="8T4-r2-Whz">
-            <objects>
-                <tableViewController id="WOk-R8-X8h" customClass="WordBankVC" customModule="Project1WordMagnets" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="l4O-QW-as3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                <tableViewController title="My Title" id="b12-QG-zOJ" customClass="WordBankVC" customModule="Project1WordMagnets" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="p7p-pR-N4i">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dG0-U2-Tbl">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="4aE-7N-bfU">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dG0-U2-Tbl" id="YxM-be-a2O">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4aE-7N-bfU" id="MaL-lW-Fo0">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="WOk-R8-X8h" id="rJ3-5n-Ypf"/>
-                            <outlet property="delegate" destination="WOk-R8-X8h" id="KaF-E3-Cv7"/>
+                            <outlet property="dataSource" destination="b12-QG-zOJ" id="LTL-9d-Mcq"/>
+                            <outlet property="delegate" destination="b12-QG-zOJ" id="fUX-ea-ohk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Word Bank Selector" id="cZT-CK-O1W">
-                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="ur3-HU-Nou">
+                    <navigationItem key="navigationItem" id="gD8-cq-e16">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="62y-JS-eS1">
                             <connections>
-                                <action selector="cancelTapped:" destination="WOk-R8-X8h" id="vQs-Nc-aTO"/>
+                                <action selector="cancelTapped:" destination="b12-QG-zOJ" id="KbB-CJ-1yA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nnB-X5-V03" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fAs-Wk-NJU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1673" y="72"/>
+            <point key="canvasLocation" x="988" y="-455.62218890554726"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PSC-iD-CTD">
+            <objects>
+                <viewController id="zTV-4i-OvP" customClass="ViewController" customModule="Project1WordMagnets" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JSl-Xs-3bR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33f-ws-e9B">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1bI-fS-WZW"/>
+                                    <barButtonItem title="Word Banks" id="ygp-5g-ZfS">
+                                        <connections>
+                                            <segue destination="Gby-Pn-uPZ" kind="popoverPresentation" identifier="showColorSegue" popoverAnchorBarButtonItem="ygp-5g-ZfS" id="YhP-64-NT5">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="33f-ws-e9B" firstAttribute="bottom" secondItem="C7z-X9-1hg" secondAttribute="bottom" id="aRM-hP-hAU"/>
+                            <constraint firstAttribute="trailing" secondItem="33f-ws-e9B" secondAttribute="trailing" id="w0y-kB-ohC"/>
+                            <constraint firstItem="33f-ws-e9B" firstAttribute="leading" secondItem="JSl-Xs-3bR" secondAttribute="leading" id="x27-BB-cEN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="C7z-X9-1hg"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Rk-Ek-uBx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-778" y="-455"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="w8u-AH-OhI">
+        <scene sceneID="6xV-N7-ag8">
             <objects>
-                <navigationController id="qU3-zL-s32" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="h2e-oo-9sh">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gby-Pn-uPZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZQM-dK-ZYc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="WOk-R8-X8h" kind="relationship" relationship="rootViewController" id="GSR-KP-koP"/>
+                        <segue destination="b12-QG-zOJ" kind="relationship" relationship="rootViewController" id="ZdW-Or-Tov"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="e7Y-wE-Ec7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rbw-mD-7ed" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="689" y="85"/>
+            <point key="canvasLocation" x="160" y="-454.27286356821594"/>
         </scene>
     </scenes>
 </document>
