--- a/word-magnets/Project1WordMagnets/Base.lproj/Main.storyboard
+++ b/word-magnets/Project1WordMagnets/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zTV-4i-OvP">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,15 +15,15 @@
             <objects>
                 <tableViewController title="My Title" id="b12-QG-zOJ" customClass="WordBankVC" customModule="Project1WordMagnets" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="p7p-pR-N4i">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="4aE-7N-bfU">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4aE-7N-bfU" id="MaL-lW-Fo0">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -49,14 +49,20 @@
         <scene sceneID="PSC-iD-CTD">
             <objects>
                 <viewController id="zTV-4i-OvP" customClass="ViewController" customModule="Project1WordMagnets" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JSl-Xs-3bR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" id="JSl-Xs-3bR" customClass="UIImageView">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33f-ws-e9B">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                 <items>
+                                    <barButtonItem title="Image" id="S4l-n7-1Kc">
+                                        <connections>
+                                            <action selector="setImageBG:" destination="zTV-4i-OvP" id="DNF-T4-ihV"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="1bI-fS-WZW"/>
+                                    <barButtonItem title="Reset" width="170" id="G53-Ly-9i5"/>
                                     <barButtonItem title="Word Banks" id="ygp-5g-ZfS">
                                         <connections>
                                             <segue destination="Gby-Pn-uPZ" kind="popoverPresentation" identifier="showColorSegue" popoverAnchorBarButtonItem="ygp-5g-ZfS" id="YhP-64-NT5">
@@ -66,10 +72,21 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d28-oE-zSd">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem title="Share" id="GNa-6k-pbO">
+                                        <connections>
+                                            <action selector="share:" destination="zTV-4i-OvP" id="rLx-Mb-m1p"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="33f-ws-e9B" firstAttribute="bottom" secondItem="C7z-X9-1hg" secondAttribute="bottom" id="aRM-hP-hAU"/>
+                            <constraint firstItem="C7z-X9-1hg" firstAttribute="bottom" secondItem="d28-oE-zSd" secondAttribute="bottom" constant="692" id="gQA-I6-dAw"/>
                             <constraint firstAttribute="trailing" secondItem="33f-ws-e9B" secondAttribute="trailing" id="w0y-kB-ohC"/>
                             <constraint firstItem="33f-ws-e9B" firstAttribute="leading" secondItem="JSl-Xs-3bR" secondAttribute="leading" id="x27-BB-cEN"/>
                         </constraints>
@@ -86,7 +103,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gby-Pn-uPZ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZQM-dK-ZYc">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
