--- a/word-magnets/Project1WordMagnets/Base.lproj/Main.storyboard
+++ b/word-magnets/Project1WordMagnets/Base.lproj/Main.storyboard
@@ -62,7 +62,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="1bI-fS-WZW"/>
-                                    <barButtonItem title="Reset" width="170" id="G53-Ly-9i5"/>
+                                    <barButtonItem title="Reset" width="170" id="G53-Ly-9i5">
+                                        <connections>
+                                            <action selector="reset:" destination="zTV-4i-OvP" id="7pU-T3-tBc"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem title="Word Banks" id="ygp-5g-ZfS">
                                         <connections>
                                             <segue destination="Gby-Pn-uPZ" kind="popoverPresentation" identifier="showColorSegue" popoverAnchorBarButtonItem="ygp-5g-ZfS" id="YhP-64-NT5">
