--- a/word-magnets/Project1WordMagnets/Base.lproj/Main.storyboard
+++ b/word-magnets/Project1WordMagnets/Base.lproj/Main.storyboard
@@ -56,17 +56,24 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33f-ws-e9B">
                                 <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                 <items>
+                                    <barButtonItem title="Share" id="GNa-6k-pbO">
+                                        <connections>
+                                            <action selector="share:" destination="zTV-4i-OvP" id="rLx-Mb-m1p"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1bI-fS-WZW"/>
                                     <barButtonItem title="Image" id="S4l-n7-1Kc">
                                         <connections>
                                             <action selector="setImageBG:" destination="zTV-4i-OvP" id="DNF-T4-ihV"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1bI-fS-WZW"/>
-                                    <barButtonItem title="Reset" width="170" id="G53-Ly-9i5">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9ed-WA-KRN"/>
+                                    <barButtonItem title="Reset" id="G53-Ly-9i5">
                                         <connections>
                                             <action selector="reset:" destination="zTV-4i-OvP" id="7pU-T3-tBc"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="mMT-Tl-sEx"/>
                                     <barButtonItem title="Word Banks" id="ygp-5g-ZfS">
                                         <connections>
                                             <segue destination="Gby-Pn-uPZ" kind="popoverPresentation" identifier="showColorSegue" popoverAnchorBarButtonItem="ygp-5g-ZfS" id="YhP-64-NT5">
@@ -76,21 +83,10 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d28-oE-zSd">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <items>
-                                    <barButtonItem title="Share" id="GNa-6k-pbO">
-                                        <connections>
-                                            <action selector="share:" destination="zTV-4i-OvP" id="rLx-Mb-m1p"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="33f-ws-e9B" firstAttribute="bottom" secondItem="C7z-X9-1hg" secondAttribute="bottom" id="aRM-hP-hAU"/>
-                            <constraint firstItem="C7z-X9-1hg" firstAttribute="bottom" secondItem="d28-oE-zSd" secondAttribute="bottom" constant="692" id="gQA-I6-dAw"/>
                             <constraint firstAttribute="trailing" secondItem="33f-ws-e9B" secondAttribute="trailing" id="w0y-kB-ohC"/>
                             <constraint firstItem="33f-ws-e9B" firstAttribute="leading" secondItem="JSl-Xs-3bR" secondAttribute="leading" id="x27-BB-cEN"/>
                         </constraints>
